# wasm-fast-renderer

./: .gitignore  RENDER_SERVICE_PLAN.md  package-lock.json
renderer/: Cargo.toml  README.md
renderer/src/: ffmpeg.rs  jobs.rs  main.rs  types.rs
src/app/api/render/: route.ts
src/app/api/render/[id]/: route.ts
src/app/api/render/[id]/output/: route.ts
src/features/editor/player/: composition.tsx
src/features/editor/player/items/: audio.tsx  video.tsx
src/features/editor/player/lib/: audio-data.ts
src/features/editor/store/: use-download-state.ts
src/features/editor/timeline/items/: audio.ts  video.ts
