[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
url = "2"

